--- a/src/index.css
+++ b/src/index.css
@@ -154,3 +154,33 @@ button {
 html {
   scroll-behavior: smooth;
 }
+
+@layer utilities {
+  .ql-align-justify {
+    text-align: justify;
+    text-justify: inter-word;
+  }
+  .ql-align-center {
+    text-align: center;
+  }
+  .ql-align-right {
+    text-align: right;
+  }
+
+  .prose ol {
+    list-style-type: decimal;
+    padding-left: 2.5rem;
+  }
+  .prose ul {
+    list-style-type: disc;
+    padding-left: 2.5rem;
+  }
+}
+
+.typography h1,
+.typography h2 {
+  font-size: 30px;
+  font-weight: 600;
+  scroll-margin-top: 80px;
+  color: var(--color-foreground);
+}
