--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,19 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+  font-display: swap;
   --radius: 0.625rem;
   --background: oklch(97.933% 0.00855 16.587);
   --foreground: oklch(0.141 0.005 285.823);
